unpackaged/main/default/objects/Special_Assignment__c/Special_Assignment__c.object-meta.xml
<CustomObject>
    <label>Special Assignment</label>
    <nameField>
        <displayFormat>RCC-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>