unpackaged/main/default/objects/Special_Assignment__c/fields/RCC_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>RCC_Team_Leader__c</fullName>
    <formula>RCC_User__r.RCC_Team_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCC Team Leader</label>
    <type>Text</type>
</CustomField>