unpackaged/main/default/objects/Special_Assignment__c/fields/RCC_User__c.field-meta.xml
<CustomField>
    <fullName>RCC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RCC_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>