unpackaged/main/default/objects/Special_Assignment__c/fields/Second_User__c.field-meta.xml
<CustomField>
    <fullName>Second_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Special_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>