unpackaged/main/default/objects/Special_Assignment__c/fields/TECH_Expertise__c.field-meta.xml
<CustomField>
    <fullName>TECH_Expertise__c</fullName>
    <formula>TEXT( Expertise__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Expertise</label>
    <type>Text</type>
</CustomField>