unpackaged/main/default/objects/Special_Assignment__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <formula>RCC_User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Id</label>
    <type>Text</type>
</CustomField>