unpackaged/main/default/objects/Special_Assignment__c/recordTypes/Expertise_Assigment.recordType-meta.xml
<RecordType>
    <fullName>Expertise_Assigment</fullName>
    <active>true</active>
    <label>Expertise Assigment</label>
</RecordType>