unpackaged/main/default/objects/Special_Assignment__c/recordTypes/RCC_Assigment.recordType-meta.xml
<RecordType>
    <fullName>RCC_Assigment</fullName>
    <active>true</active>
    <label>RCC Assigment</label>
</RecordType>