unpackaged/main/default/objects/Special_Assignment__c/validationRules/VR_SpecialAssignment_AgencyNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SpecialAssignment_AgencyNotEditable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.BypassVR__c ),
NOT(ISNEW()),
ISCHANGED( Agency__c )
)</errorConditionFormula>
    <errorDisplayField>Agency__c</errorDisplayField>
    <errorMessage>You can't change the agency for RCC Special Assignment. Please remove it and create new one.</errorMessage>
</ValidationRule>