unpackaged/main/default/objects/Special_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>RCC_User__c</columns>
    <columns>Second_User__c</columns>
    <columns>RCC_Team_Leader_Name__c</columns>
    <columns>RCC_Team_Leader__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>